--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@lowkey/react-native-link-preview": "^0.2.2",
     "@mui/icons-material": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -16,6 +17,7 @@
     "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-native-web": "^0.17.7",
     "react-scripts": "^2.1.3",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
