--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@lowkey/react-native-link-preview": "^0.2.2",
     "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
-    "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
     "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-native-web": "^0.17.7",
     "react-scripts": "^2.1.3",
-    "typescript": "^4.7.2",
+    "tsc": "^2.0.4",
+    "tsoa": "^4.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,6 +49,10 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.182"
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.36",
+    "typescript": "^4.7.2"
   }
 }
