--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
     "react": "^18.1.0",
@@ -53,6 +54,7 @@
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.36",
+    "nodemon": "^2.0.20",
     "typescript": "^4.7.2"
   }
 }
