--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-native-web": "^0.17.7",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
     "tsc": "^2.0.4",
     "tsoa": "^4.1.0",
