--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cd client && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -55,6 +55,7 @@
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.36",
+    "@types/validator": "^13.7.10",
     "nodemon": "^2.0.20",
     "typescript": "^4.7.2"
   }
