cleanup package.json

--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   },
   "scripts": {
     "start": "cd client && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "cd client && react-scripts build",
+    "test": "cd client && react-scripts test",
+    "eject": "cd client && react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
